- profile to edit username and password - !!! /change_password is not the same as forgot_password --> change_password is for changinng password of existing logged in account

--- a/static/main.css
+++ b/static/main.css
@@ -447,7 +447,7 @@ text-align: center;
     margin-bottom: 10px;
 }
 
-.fa-envelope-circle{
+.fa-icon-circle{
     margin-right:8px;
     margin-bottom: 12px;
     align-items: center;
