--- a/templates/cart.html
+++ b/templates/cart.html
@@ -31,6 +31,11 @@
                             <td>{{ item[2] }}%</td>
                             <td>{{ item[3] }}</td>
                             <td>${{ item[4] }}</td>
+                            <td>
+                                <a href="{{ url_for('remove_cart_item', user_id=user_account[0], item_num=loop.index) }}">
+                                    <i class="fas fa-minus-circle"></i>
+                                </a>
+                            </td>
                         </tr>
                     {% endfor %}
                     </tbody>
