--- a/templates/admin_dashboard.html
+++ b/templates/admin_dashboard.html
@@ -1,8 +1,67 @@
 {% extends "admin_base.html" %}
 {% block content %}
-    <div class="row">
-        <div class="col-md-12">
-            <p>Test</p>
+<div class="row">
+
+
+    <div class="col-sm-3">
+        <div class=" swoy-card card" style="background-color: #E7F3FC; color:black">
+            <div>
+                <h3>No Of Admin</h3>
+            </div>
+
+            <div class="text-center">
+                <h3>{{noOfAdmin}}</h3>
+            </div>
         </div>
     </div>
+
+    <div class="col-sm-3">
+        <div class=" swoy-card card" style="background-color: #E7F3FC; color:black">
+            <div>
+                <h3>No Of Users</h3>
+            </div>
+
+            <div class="text-center">
+                <h3>{{noOfUser}}</h3>
+            </div>
+        </div>
+    </div>
+
+    <div class="col-sm-3">
+        <div class=" swoy-card card" style="background-color: #E7F3FC; color:black">
+            <div>
+                <h3>Number Of Toppings</h3>
+            </div>
+
+            <div class="text-center">
+                <h3>{{toppingsNo}}</h3>
+            </div>
+        </div>
+    </div>
+
+    <div class="col-sm-3">
+        <div class=" swoy-card card" style="background-color: #E7F3FC; color:black">
+            <div>
+                <h3>Number of Drinks</h3>
+            </div>
+
+            <div class="text-center">
+                <h3>{{drinkNo}}</h3>
+            </div>
+        </div>
+    </div>
+
+    <div class="col-sm-3">
+        <div class=" swoy-card card" style="background-color: #E7F3FC; color:black">
+            <div>
+                <h3>Number of Orders</h3>
+            </div>
+
+            <div class="text-center">
+                <h3>3</h3>
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock %}
+
