--- a/templates/admin_menu_drinks.html
+++ b/templates/admin_menu_drinks.html
@@ -6,7 +6,7 @@
             <article class="media content-section">
                 <div class="media-body">
                     <div class=" swoy-card card">
-                        <a href="{{ url_for('admin_menu_drinks_modify', drink_id=item.id) }}" style="text-decoration:none;">
+                        <a href="{{ url_for('admin_menu_drinks_modify', drink_id=item.id, id=user_account[0]) }}" style="text-decoration:none;">
                             {% if item.image != None %}
                                 <img class="card-img-top responsive" src="../static/{{ item.image }}" alt="No image">
                             {% else %}
@@ -25,7 +25,7 @@
         <div class="col-md-4" style="margin-bottom:25px;">
             <article class="media content-section">
                 <div class="media-body">
-                    <a href="{{ url_for('admin_menu_drinks_add') }}" style="text-decoration:none;">
+                    <a href="{{ url_for('admin_menu_drinks_add', id=user_account[0]) }}" style="text-decoration:none;">
                         <div class=" swoy-card card" style="text-align:center;">
                             <i class="fas fa-plus-circle add" style="font-size: 100px; padding-top:115px; padding-bottom:115px;"></i>
                         </div>
