+ Bug fixed + Log interface

--- a/templates/admin_base.html
+++ b/templates/admin_base.html
@@ -102,13 +102,13 @@
                             <span>Delivery Orders</span>
                         </a>
                     </li>
-                    <li>
-                        <a href="{{ url_for('admin_feedbacks', id=user_account[0]) }}">
-                            <!--                                <i class="fas fa-folder"></i>-->
-                            <i class="fas fa-star"></i>
-                            <span>Customer Feedbacks</span>
-                        </a>
-                    </li>
+<!--                    <li>-->
+<!--                        <a href="{{ url_for('admin_feedbacks', id=user_account[0]) }}">-->
+<!--                            &lt;!&ndash;                                <i class="fas fa-folder"></i>&ndash;&gt;-->
+<!--                            <i class="fas fa-star"></i>-->
+<!--                            <span>Customer Feedbacks</span>-->
+<!--                        </a>-->
+<!--                    </li>-->
                     <!--                        <li class="sidebar-dropdown">-->
                     <!--                            <a href="#">-->
                     <!--                                <i class="fa fa-shopping-cart"></i>-->
