--- a/templates/admin_add_admin_account.html
+++ b/templates/admin_add_admin_account.html
@@ -4,7 +4,7 @@
 <div>
     <div style="margin: 100px;">
         <div class="container-fluid swoy-container swoy-form-container">
-            <form method="post" class="swoy-container">
+            <form method="post" action="{{ url_for('add_admin_account', id=user_account[0]) }}" class="swoy-container">
                 {{ form.csrf_token }}
                 <div class="form-group col">
                     <h2>Sign up</h2>
