--- a/templates/admin_dashboard.html
+++ b/templates/admin_dashboard.html
@@ -3,10 +3,10 @@
 <div class="row">
 
 
-    <div class="col-sm-3">
+    <div class="col-sm-4">
         <div class=" swoy-card card" style="background-color: #E7F3FC; color:black">
             <div>
-                <h3>No Of Admin</h3>
+                <h3>No. Of Admins</h3>
             </div>
 
             <div class="text-center">
@@ -15,10 +15,10 @@
         </div>
     </div>
 
-    <div class="col-sm-3">
+    <div class="col-sm-4">
         <div class=" swoy-card card" style="background-color: #E7F3FC; color:black">
             <div>
-                <h3>No Of Users</h3>
+                <h3>No. Of Users</h3>
             </div>
 
             <div class="text-center">
@@ -27,10 +27,10 @@
         </div>
     </div>
 
-    <div class="col-sm-3">
+    <div class="col-sm-4">
         <div class=" swoy-card card" style="background-color: #E7F3FC; color:black">
             <div>
-                <h3>Number Of Toppings</h3>
+                <h3>No. Of Toppings</h3>
             </div>
 
             <div class="text-center">
@@ -39,10 +39,10 @@
         </div>
     </div>
 
-    <div class="col-sm-3">
+    <div class="col-sm-4">
         <div class=" swoy-card card" style="background-color: #E7F3FC; color:black">
             <div>
-                <h3>Number of Drinks</h3>
+                <h3>No. of Drinks</h3>
             </div>
 
             <div class="text-center">
@@ -51,14 +51,14 @@
         </div>
     </div>
 
-    <div class="col-sm-3">
+    <div class="col-sm-4">
         <div class=" swoy-card card" style="background-color: #E7F3FC; color:black">
             <div>
-                <h3>Number of Orders</h3>
+                <h3>No. of Orders</h3>
             </div>
 
             <div class="text-center">
-                <h3>3</h3>
+                <h3>{{noOfOrder}}</h3>
             </div>
         </div>
     </div>
