--- a/templates/admin_logs.html
+++ b/templates/admin_logs.html
@@ -12,7 +12,7 @@
             <tbody>
             {% for log in logs %}
             <tr>
-                <th scope="row">{{ loop.index }}</th>
+                <th scope="row">{{ logs|length - loop.index + 1 }}</th>
                 <td>{{ log }}</td>
             </tr>
             {% endfor %}
