--- a/templates/home.html
+++ b/templates/home.html
@@ -14,7 +14,7 @@
     {% endif %}
     <div class="row">
         {% for item in drink_list %}
-        <div class="col-md-4">
+        <div class="col-md-4" style="margin-bottom:25px;">
             <article class="media content-section">
                 <div class="media-body">
                     <div class=" swoy-card card" style="">
