--- a/templates/signup.html
+++ b/templates/signup.html
@@ -23,10 +23,10 @@
                     {{render_field(form.email, class="form-control", placeholder="apple@example.com")}}
                 </div>
                 <div class="form-group col">
-                    {{render_field(form.password, class="form-control", placeholder="at least 8 characters, contain at least 1 symbol (@, $, !, %, *, #, ?, &), at least 1 uppercase, at least 1 lowercase")}}
+                    {{render_field(form.password, class="form-control", placeholder="At least 8 characters, contain at least 1 symbol (@, $, !, %, *, #, ?, &), at least 1 uppercase, at least 1 lowercase")}}
                 </div>
                 <div class="form-group col">
-                    {{render_field(form.confirm, class="form-control", placeholder="at least 8 characters, contain at least 1 symbol (@, $, !, %, *, #, ?, &), at least 1 uppercase, at least 1 lowercase")}}
+                    {{render_field(form.confirm, class="form-control", placeholder="At least 8 characters, contain at least 1 symbol (@, $, !, %, *, #, ?, &), at least 1 uppercase, at least 1 lowercase")}}
                 </div>
                 <div class="form-group col">
                     {{render_field(form.security_qns, class="form-control")}}
