new logs removed security qns stuff logging session stuff fixed otp thingy for admin logins

--- a/templates/forgot_password.html
+++ b/templates/forgot_password.html
@@ -14,13 +14,10 @@
             <form method="post" class="swoy-container" action="{{url_for('security_question', email=email)}}">
                 {{ form.csrf_token }}
                 <div class="form-group col">
-                    <h2>Your Security Question:</h2>
+                    <h2>One-time Pin (OTP) :</h2>
                 </div>
                 <div class="form-group col">
-                     <p>{{ security_qn }}</p>
-                </div>
-                <div class="form-group col">
-                    {{render_field(form.security_ans, class="form-control")}}
+                    {{render_field(form.otp, class="form-control", placeholder="******")}}
                 </div>
                 {% if error %}
                     <p class="error form-group col" style="color:red; background-color:pink; border-radius:10px;">{{ error }}</p>
