--- a/templates/change_password.html
+++ b/templates/change_password.html
@@ -26,6 +26,9 @@
                 <p class="error form-group col" style="color:red; background-color:pink; border-radius:10px;">Oops.
                     Something went wrong.</p>
                 {% endif %}
+                  {% if error_password %}
+                <p class="error form-group col" style="color:red; background-color:pink; border-radius:10px;">{{ error_password }}</p>
+                {% endif %}
                 <div class="save-changes-btn">
                     <button type="submit" class="swoy-btn btn">Save Changes</button>
                 </div>
