--- a/templates/forgot_password(1).html
+++ b/templates/forgot_password(1).html
@@ -11,7 +11,7 @@
 <div>
     <div style="margin: 100px;">
         <div class="container-fluid swoy-container swoy-form-container">
-            <form method="post" class="swoy-container" action="{{url_for('forgot_password')}}">
+            <form method="post" class="swoy-container" action="{{url_for('forgot_password_email_form')}}">
                 {{ form.csrf_token }}
                 <div class="form-group col">
                     <h2>Your email:</h2>
