--- a/templates/forgot_password(2).html
+++ b/templates/forgot_password(2).html
@@ -11,7 +11,7 @@
 <div>
     <div style="margin: 100px;">
         <div class="container-fluid swoy-container swoy-form-container">
-            <form method="post" class="swoy-container" action="{{url_for('security_question', email=email)}}">
+            <form method="post" class="swoy-container" action="{{url_for('forgot_pwd_otp')}}">
                 {{ form.csrf_token }}
                 <div class="form-group col">
                     <h2>One-time Pin (OTP) :</h2>
