--- a/templates/forgot_password(3).html
+++ b/templates/forgot_password(3).html
@@ -11,7 +11,7 @@
 <div>
     <div style="margin: 100px;">
         <div class="container-fluid swoy-container swoy-form-container">
-            <form method="post" class="swoy-container" action="{{url_for('forgot_password_change', email=email)}}">
+            <form method="post" class="swoy-container" action="{{url_for('forgot_password_change')}}">
                 {{ form.csrf_token }}
                 <div class="form-group col">
                     <h2>Update Your Password</h2>
@@ -23,8 +23,10 @@
                     {{render_field(form.confirm_new_pwd, class="form-control")}}
                 </div>
                 {% if error %}
-                <p class="error form-group col" style="color:red; background-color:pink; border-radius:10px;">Oops.
-                    Something went wrong.</p>
+                <p class="error form-group col" style="color:red; background-color:pink; border-radius:10px;">{{ error }}</p>
+                {% endif %}
+                {% if error_password %}
+                <p class="error form-group col" style="color:red; background-color:pink; border-radius:10px;">{{ error_password }}</p>
                 {% endif %}
                 <div class="text-center">
                     <button type="submit" class="swoy-btn btn btn-primary btn-block">Enter</button>
