--- a/templates/admin_OTP_authentication.html
+++ b/templates/admin_OTP_authentication.html
@@ -19,7 +19,7 @@
                 {{render_field(form.otp, class="form-control", placeholder="******")}}
             </div>
             <div style="padding-top:10px;">
-                <a href="" class="security-qns"> Resend? </a>
+                <a href="{{url_for('authenticate_otp')}}" class="security-qns"> Resend? </a>
             </div>
             <div class="text-center">
                 <button type="submit" class="swoy-btn btn btn-primary btn-block">Enter</button>
