--- a/templates/base.html
+++ b/templates/base.html
@@ -67,7 +67,7 @@
             </li>
             <li class="nav-item active">
                 <a href="{{ url_for('logout') }}">
-                    <button class="btn btn-navbar swoy-btn my-2 my-sm-0">Log out</button>
+                    <button class="btn btn-navbar swoy-btn my-2 my-sm-0">Sign Out</button>
                 </a>
             </li>
             <li><a href="{{ url_for('cart') }}">
@@ -78,12 +78,12 @@
                 {% else %}
             <li class="nav-item active">
                 <a href="/login">
-                    <button class="btn btn-navbar swoy-btn my-2 my-sm-0">Log in</button>
+                    <button class="btn btn-navbar swoy-btn my-2 my-sm-0">Sign In</button>
                 </a>
             </li>
             <li>
                 <a href="/signup">
-                    <button class="btn btn-navbar swoy-btn my-2 my-sm-0">Sign up</button>
+                    <button class="btn btn-navbar swoy-btn my-2 my-sm-0">Sign Up</button>
                 </a>
             </li>
             {% endif %}
