--- a/templates/error_404.html
+++ b/templates/error_404.html
@@ -10,7 +10,7 @@
     <div style="position:absolute;left:0;top:50%;width:100%;text-align:center;color:#000;">
         <h1 style="text-align:center;font-size:36px;"> Error 404 - Page Not Found </h1>
         <p style="text-align:center;"> The page you were looking for wasn't found. </p>
-        <p style="text-align:center;"><a href="/home"></a></p>
+        <p style="text-align:center;"><a href="/home">back home</a></p>
     </div>
     <div class="video-container">
         <video autoplay muted loop style="position:absolute;z-index:-1;top:0;left:0;width:100%;height:100%;object-fit:cover;">
