separate log files for admin and user

--- a/templates/admin_dashboard.html
+++ b/templates/admin_dashboard.html
@@ -5,11 +5,12 @@
 
     <div class="col-sm-4">
         <div class=" swoy-card card" style="background-color: #E7F3FC; color:black">
-            <div>
+            <div class="text-center">
                 <h3>No. Of Admins</h3>
             </div>
 
             <div class="text-center">
+                <img src="../static/admin_admin.png" style="width: 100px;">
                 <h3>{{noOfAdmin}}</h3>
             </div>
         </div>
@@ -17,11 +18,12 @@
 
     <div class="col-sm-4">
         <div class=" swoy-card card" style="background-color: #E7F3FC; color:black">
-            <div>
+            <div class="text-center">
                 <h3>No. Of Users</h3>
             </div>
 
             <div class="text-center">
+                <img src="../static/admin_user.png" style="width: 100px;">
                 <h3>{{noOfUser}}</h3>
             </div>
         </div>
@@ -29,11 +31,12 @@
 
     <div class="col-sm-4">
         <div class=" swoy-card card" style="background-color: #E7F3FC; color:black">
-            <div>
+            <div class="text-center">
                 <h3>No. Of Toppings</h3>
             </div>
 
             <div class="text-center">
+                <img src="../static/admin_toppings.png" style="width: 100px;">
                 <h3>{{toppingsNo}}</h3>
             </div>
         </div>
@@ -41,11 +44,12 @@
 
     <div class="col-sm-4">
         <div class=" swoy-card card" style="background-color: #E7F3FC; color:black">
-            <div>
+            <div class="text-center">
                 <h3>No. of Drinks</h3>
             </div>
 
             <div class="text-center">
+                <img src="../static/admin_drinks.png" style="width: 100px;">
                 <h3>{{drinkNo}}</h3>
             </div>
         </div>
@@ -53,18 +57,19 @@
 
     <div class="col-sm-4">
         <div class=" swoy-card card" style="background-color: #E7F3FC; color:black">
-            <div>
+            <div class="text-center">
                 <h3>No. of Orders</h3>
             </div>
 
             <div class="text-center">
+                                <img src="../static/admin_order.png" style="width: 100px;">
                 <h3>{{noOfOrder}}</h3>
             </div>
         </div>
     </div>
 </div>
-    <div style="margin:20px">
-        <p style="color:red">{{error}}</p>
-    </div>
+<div style="margin:20px">
+    <p style="color:red">{{error}}</p>
+</div>
 {% endblock %}
 
