login sounds better

--- a/templates/base.html
+++ b/templates/base.html
@@ -78,7 +78,7 @@
                 {% else %}
             <li class="nav-item active">
                 <a href="/login">
-                    <button class="btn btn-navbar swoy-btn my-2 my-sm-0">Sign In</button>
+                    <button class="btn btn-navbar swoy-btn my-2 my-sm-0">Log In</button>
                 </a>
             </li>
             <li>
