view admin and user logs

--- a/templates/admin_base.html
+++ b/templates/admin_base.html
@@ -168,10 +168,20 @@
                             <span>Admin Accounts</span>
                         </a>
                     </li>
+
+                    <li class="header-menu">
+                        <span>Logs</span>
+                    </li>
                     <li>
                         <a href="{{ url_for('admin_logs') }}">
                             <i class="fa fa-file-alt"></i>
-                            <span>History Logs</span>
+                            <span>Admin Logs</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="{{ url_for('user_logs') }}">
+                            <i class="fa fa-file-alt"></i>
+                            <span>User Logs</span>
                         </a>
                     </li>
                     <!--                        <li>-->
